--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
@@ -7,16 +7,10 @@
     <ClCompile Include="..\..\..\Utils\database.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Utils\similarImage.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\Utils\ClipboardUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Utils\NetworkConnection.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\Utils\Utils.cpp">
+    <ClCompile Include="..\similarImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
