more adjustments to reflect project struture

--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -93,7 +93,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -112,7 +112,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,7 +134,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,7 +157,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_FILE_UTILS);$(MY_HASH_UTILS);$(MY_LOG_UTILS);$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_STRING_UTILS);C:\myLibs\includes;C:\SQLite3\src;..\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -173,10 +173,10 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Utils\database.h" />
-    <ClInclude Include="..\..\..\Utils\DatabaseController.h" />
-    <ClInclude Include="..\CFGHelper.h" />
-    <ClInclude Include="..\WinToDBMiddleman.h" />
+    <ClInclude Include="..\common\CFGHelper.h" />
+    <ClInclude Include="..\common\DatabaseController.h" />
+    <ClInclude Include="..\common\SQLiteDB.h" />
+    <ClInclude Include="..\common\WinToDBMiddleman.h" />
     <ClInclude Include="DataBaseBuilder.h" />
     <ClInclude Include="DatabaseDataParser.h" />
     <ClInclude Include="DatabaseManager.h" />
@@ -186,10 +186,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Utils\database.cpp" />
-    <ClCompile Include="..\..\..\Utils\DatabaseControllercpp.cpp" />
-    <ClCompile Include="..\CFGHelper.cpp" />
-    <ClCompile Include="..\WinToDBMiddleman.cpp" />
+    <ClCompile Include="..\common\CFGHelper.cpp" />
+    <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
+    <ClCompile Include="..\common\SQLiteDB.cpp" />
+    <ClCompile Include="..\common\WinToDBMiddleman.cpp" />
     <ClCompile Include="DatabaseBuilder.cpp" />
     <ClCompile Include="DataBaseManager.cpp" />
     <ClCompile Include="DatabaseDataParser.cpp" />
