--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj
@@ -88,7 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\common\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -103,7 +103,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\common\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -121,7 +121,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\common\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,7 +140,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);C:\sqlite3\src;..\common\</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -155,14 +155,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Utils\DatabaseController.h" />
-    <ClInclude Include="..\database.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Utils\database.cpp" />
-    <ClCompile Include="..\..\..\Utils\DatabaseControllercpp.cpp" />
     <ClCompile Include="CreateNewDB.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
