--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj.filters
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="CreateNewDB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\DatabaseControllercpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
