--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
@@ -88,7 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -104,7 +104,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -122,7 +122,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -142,7 +142,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;C:\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
