one project can build now

--- a/SmartCatalogue/createNewDB/CreateNewDB.vcxproj.filters
+++ b/SmartCatalogue/createNewDB/CreateNewDB.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="..\common\DatabaseControllercpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\SQLiteDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
